--- a/LetsDish/LetsDish/Views/Shared/_Layout.cshtml
+++ b/LetsDish/LetsDish/Views/Shared/_Layout.cshtml
@@ -6,9 +6,10 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top" ng-app="LetsDish">
+<body ng-app="LetsDish">
+    <div class="navbar navbar-inverse navbar-fixed-top" >
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -16,12 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a class ="navbar-brand" href="/#!/">Let's Dish!</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li><a href="/#!/">Home</a></li>
+                    <li><a href="/#!/addRecipe">Add a Recipe</a></li>
+                    <li><a href="/#!/events">Events</a></li>
+                    <li><a href="/#!/myFriends">Friends</a></li>
                 </ul>
             </div>
         </div>
