recipes can be edited and duplicated

--- a/LetsDish/LetsDish/Views/Shared/_Layout.cshtml
+++ b/LetsDish/LetsDish/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
                     <li><a href="/#!/addRecipe">Add a Recipe</a></li>
                     <li><a href="/#!/events">Events</a></li>
                     <li><a href="/#!/myFriends">Friends</a></li>
+                    <li><a href="/#!/shoppingList">Shopping List</a></li>
+
                 </ul>
             </div>
         </div>
