--- a/LetsDish/LetsDish/ngApp/Views/singleRecipe.html
+++ b/LetsDish/LetsDish/ngApp/Views/singleRecipe.html
@@ -45,8 +45,36 @@
     </form>
 
     <button ng-show="!vm.overwriteRecipe" type="submit" class="btn btn-default" ng-click="vm.editRecipe()">Edit/Update Recipe</button>
-    <div ng-show="vm.overwriteRecipe">
+    <button ng-show="!vm.overwriteRecipe" type="submit" class="btn btn-default" data-toggle="modal" data-target="#myModal" >Send by Email</button>
+     <div ng-show="vm.overwriteRecipe">
         <button type="submit" class="btn btn-default" ng-click="vm.editCurrentRecipe()">Overwrite Current Recipe</button> or  
         <button type="submit" class="btn btn-default" ng-click="vm.duplicateRecipe(vm.recipe)">Save Changes as New</button>?
     </div>
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Send Recipe by Email</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">From:</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="your email address">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">To:</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="recipient email address">
+                        </div>
+                        
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" ng-click="vm.emailRecipe()">Send</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 </div>
