hid non-working features

--- a/LetsDish/LetsDish/Views/Shared/_Layout.cshtml
+++ b/LetsDish/LetsDish/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li><a href="/#!/">Home</a></li>
                     <li><a href="/#!/addRecipe">Add a Recipe</a></li>
                     <li><a href="/#!/events">Events</a></li>
-                    <li><a href="/#!/myFriends">Friends</a></li>
+                    @*<li><a href="/#!/myFriends">Friends</a></li>*@
                     <li><a href="/#!/shoppingList">Shopping List</a></li>
 
                 </ul>
