--- a/LetsDish/LetsDish/ngApp/Views/shoppingList.html
+++ b/LetsDish/LetsDish/ngApp/Views/shoppingList.html
@@ -1,6 +1,8 @@
-﻿<div ng-controller="shoppingListController as vm">
-    <h1>Shopping List</h1>
-    <table class="table table-striped">
+﻿<div ng-controller="shoppingListController as vm" >
+    <div class="text-center">
+        <img src="./images/letsdishshoppinglistheader.PNG" class="headerImg" />
+    </div>
+    <table class="table">
         <tr ng-repeat="ingredient in vm.ingredients">
             <td>
                 <div class="checkbox" >
