--- a/LetsDish/LetsDish/Views/Shared/_Layout.cshtml
+++ b/LetsDish/LetsDish/Views/Shared/_Layout.cshtml
@@ -5,39 +5,51 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/fontawesome")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body ng-app="LetsDish">
-    <div class="navbar navbar-inverse navbar-fixed-top" >
+    <div class="navbar navbar-inverse navbar-fixed-top" id="navigation">
         <div class="container">
-            <div class="navbar-header">
+            @*<div class="navbar-header">*@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class ="navbar-brand" href="/#!/">Let's Dish!</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/#!/">Home</a></li>
-                    <li><a href="/#!/addRecipe">Add a Recipe</a></li>
-                    <li><a href="/#!/events">Events</a></li>
-                    @*<li><a href="/#!/myFriends">Friends</a></li>*@
-                    <li><a href="/#!/shoppingList">Shopping List</a></li>
+                @*<a class ="navbar-brand" href="/#!/">Let's Dish!</a>
+                <img src="~/images/LetsDishLogo.png" id="logo"/>
+            </div>*@
 
-                </ul>
+            <div class="navbar-header logoHeader">
+                @*<a class="navbar-brand" href="#">
+                    <img alt="Brand" id="logoImg" src="~/images/LetsDishLogo.png">
+                </a>*@
             </div>
-        </div>
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="/#!/">Let's Dish!</a></li>
+            </ul>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/#!/">Home</a></li>
+                        <li><a href="/#!/addRecipe">Add a Recipe</a></li>
+                        <li><a href="/#!/events">Events</a></li>
+                        @*<li><a href="/#!/myFriends">Friends</a></li>*@
+                        <li><a href="/#!/shoppingList">Shopping List</a></li>
+
+                    </ul>
+                </div>
+</div>
     </div>
-    <div class="container body-content">
+
+    <div class="container body-content" id="allContent">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
+        <footer>
+            <img src="~/images/Letsdishfooter.png" id="footerimg"/>
+            <p id="footNote">&copy; @DateTime.Now.Year - Let's Dish! by Full-Stack Finch</p>
+        </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
