--- a/LetsDish/LetsDish/ngApp/Views/addRecipe.html
+++ b/LetsDish/LetsDish/ngApp/Views/addRecipe.html
@@ -1,4 +1,8 @@
 ﻿<div ng-controller="recipeController as vm">
+    <div class="text-center">
+        <img src="./images/letsdishaddarecipeheader.PNG" class="headerImg" />
+    </div>
+
     <form>
         <div class="form-group">
             <label for="exampleInputEmail1">Recipe Name</label>
@@ -14,7 +18,11 @@
         <label>Add an ingredient:</label>
         
         <input ng-model="vm.ingredient.IngredientDescription" type="text" class="form-control" />
-        <button type="submit" class="btn btn-default" ng-click="vm.addIngredient()">Next Ingredient</button>
+        <button type="submit" class="btn btn-default" ng-click="vm.addIngredient()">
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+        </button>
+        <br />
+        <br />
         <button type="submit" class="btn btn-default" ng-click="vm.addDirections()">Done with Ingredients</button>
 
     </form> 
