--- a/LetsDish/LetsDish/ngApp/Views/login.html
+++ b/LetsDish/LetsDish/ngApp/Views/login.html
@@ -1,48 +1,61 @@
 ﻿
     <div ng-controller="loginController as vm">
+        <div id="loginForm">
+            <div class="row">
 
-        <form ng-show="vm.registered">
-            <div class="form-group">
-                <label for="exampleInputEmail1">Username</label>
-                <input ng-model="vm.username" type="text" class="form-control" id="exampleInputEmail1" placeholder="Username">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input ng-model="vm.password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
+                <div class="col-md-6 text-center">
+                    <img src="../images/LetsDishLogo.png" />
+                </div>
+                <div class="col-md-1">
+
+                </div>
+                <div class="col-md-5">
+
+            <form ng-show="vm.registered">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Username</label>
+                    <input ng-model="vm.username" type="text" class="form-control" id="exampleInputEmail1" placeholder="Username">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input ng-model="vm.password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
                        
-            <button type="submit" ng-click="vm.login()" class="btn btn-default">Submit</button>
-            <div>
-                New user? Click to Register!
-                <button type="submit" ng-click="vm.showRegister()" class="btn btn-default">Register</button>
-            </div>
-        </form>
-        <form ng-show="!vm.registered">
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input ng-model="vm.username" type="email" class="form-control"  placeholder="Email">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input ng-model="vm.password" type="password" class="form-control"  placeholder="Password">
-            </div>
+                <button type="submit" ng-click="vm.login()" class="btn btn-default">Submit</button>
+                <div>
+                    New user? Click to Register!
+                    <button type="submit" ng-click="vm.showRegister()" class="btn btn-default">Register</button>
+                </div>
+            </form>
+            <form ng-show="!vm.registered">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input ng-model="vm.username" type="email" class="form-control"  placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input ng-model="vm.password" type="password" class="form-control"  placeholder="Password">
+                </div>
                 
-            <div class="form-group">
-                <label for="exampleInputPassword1">Re-Enter Password</label>
-                <input ng-model="vm.password2" type="password" class="form-control"  placeholder="Password">
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Re-Enter Password</label>
+                    <input ng-model="vm.password2" type="password" class="form-control"  placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">First Name</label>
+                    <input ng-model="vm.fName" type="text" class="form-control"  placeholder="First Name">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Last Name</label>
+                    <input ng-model="vm.lName" type="text" class="form-control" placeholder="Last Name">
+                </div>
+                    <button type="submit" ng-click="vm.register()" class="btn btn-default">Submit</button>
+                <div>
+                    Already registered? Click to Login!
+                    <button type="submit" ng-click="vm.showRegister()" class="btn btn-default">Login</button>
+                </div>
+            </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">First Name</label>
-                <input ng-model="vm.fName" type="text" class="form-control"  placeholder="First Name">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Last Name</label>
-                <input ng-model="vm.lName" type="text" class="form-control" placeholder="Last Name">
-            </div>
-                <button type="submit" ng-click="vm.register()" class="btn btn-default">Submit</button>
-            <div>
-                Already registered? Click to Login!
-                <button type="submit" ng-click="vm.showRegister()" class="btn btn-default">Login</button>
-            </div>
-        </form>
+        </div>
     </div>
