--- a/LetsDish/LetsDish/ngApp/Views/recipeList.html
+++ b/LetsDish/LetsDish/ngApp/Views/recipeList.html
@@ -1,7 +1,15 @@
-﻿<div ng-controller="recipeListController as vm">
-
-    <h1>My Recipes</h1>
+﻿<div ng-controller="recipeListController as vm" class="text-center">
+    <img src="./images/letsdishmyrecipesheader.png" class="headerImg"/>
     <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail" ng-click="vm.addArecipe()">
+                <img src="./images/RecipeCard.png">
+                <div class="caption">
+                    <h3 class="text-center">Add a New Recipe</h3>
+
+                </div>
+            </div>
+        </div>
         <div ng-repeat="recipe in vm.recipes" class="col-sm-6 col-md-4">
             <div class="thumbnail" ng-click="vm.RecipeView(recipe.RecipeId)">
                 <img src="{{recipe.Picture}}">
